<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/details_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/pokemon_sprite"
                android:src="@drawable/pokeapi_256" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/details_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_label"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/details_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_label"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/details_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height_label"
                    android:textSize="18sp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">
            <TextView
                android:id="@+id/details_base_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/base_experience_label"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/details_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_label"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/details_species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/species_label"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/details_abilities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abilities_label"
                android:textSize="18sp"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>